Refonte de l'affichage des membres d'un groupe secondaire

--- a/src/LarpManager/Views/admin/groupeSecondaire/detail.twig
+++ b/src/LarpManager/Views/admin/groupeSecondaire/detail.twig
@@ -36,6 +36,14 @@
 						<a href="{{ path('groupeSecondaire.materiel.print', {'groupeSecondaire': groupeSecondaire.id}) }}">Impression</a>
 					</p>
 				</div>
+				<div class="list-group-item">
+					<h6>Documents</h6>
+					Ajouter
+				</div>
+				<div class="list-group-item">
+					<h6>Objets</h6>
+					Ajouter
+				</div>
 				
 				<div class="list-group-item">
 					<div class="list-group-item-heading">
@@ -102,31 +110,34 @@
 			<a href="{{ path('groupeSecondaire.admin.newMembre', {'groupeSecondaire': groupeSecondaire.id}) }}">Ajouter un membre</a>
 			<div class="list-group">
 				{% for membre in groupeSecondaire.membres %}
-					{% if membre.personnage.participeTo(gn) %}
-						<div class="list-group-item">
-							<div class="list-group-item-heading">
-								<h6 class="list-group-item-heading"><a href="{{ path('personnage.admin.detail', {'personnage': membre.personnage.id}) }}">{{ membre.personnage.identityByLabel(gn.getLabel()) }}</a></h6>
-							</div>
-							<div class="list-group-item-text">
-								{% if membre.secret %}
-									<p class="text-danger">A accès aux secrets du groupe</p>
-									<a href="{{ path('groupeSecondaire.admin.secret.off', {'groupe': groupeSecondaire.id , 'membre':membre.id}) }}">
-										Retirer l'accés aux secrets
-									</a>
-								{% else %}
-									<p>N'a pas accès aux secrets du groupe</p>
-									<a href="{{ path('groupeSecondaire.admin.secret.on', {'groupe': groupeSecondaire.id , 'membre':membre.id}) }}">
-										Donner accés aux secrets
-									</a>
-								{% endif %}
-							</div>
-							<div class="list-group-item-text">
-								<a href="{{ path('groupeSecondaire.admin.member.remove', {'groupe': groupeSecondaire.id, 'membre': membre.id}) }}">
-									Retirer ce membre.
-								</a>
-							</div>
+					<div class="list-group-item">
+						<div class="list-group-item-heading">
+							<h6 class="list-group-item-heading"><a href="{{ path('personnage.admin.detail', {'personnage': membre.personnage.id}) }}">{{ membre.personnage.identityByLabel(gn.getLabel()) }}</a></h6>
+							{% if membre.personnage.participeTo(gn) %}
+							<span class="text-success">Inscrit à {{ gn.label }}</span><br />
+							{% else %}
+							<span class="text-info">Personnage pas inscrit à {{ gn.label }}</span><br />
+							{% endif %}
 						</div>
-					{% endif %}
+						<div class="list-group-item-text">
+							{% if membre.secret %}
+								<p class="text-danger">A accès aux secrets du groupe</p>
+								<a href="{{ path('groupeSecondaire.admin.secret.off', {'groupe': groupeSecondaire.id , 'membre':membre.id}) }}">
+									Retirer l'accés aux secrets
+								</a>
+							{% else %}
+								<p>N'a pas accès aux secrets du groupe</p>
+								<a href="{{ path('groupeSecondaire.admin.secret.on', {'groupe': groupeSecondaire.id , 'membre':membre.id}) }}">
+									Donner accés aux secrets
+								</a>
+							{% endif %}
+						</div>
+						<div class="list-group-item-text">
+							<a href="{{ path('groupeSecondaire.admin.member.remove', {'groupe': groupeSecondaire.id, 'membre': membre.id}) }}">
+								Retirer ce membre.
+							</a>
+						</div>
+					</div>
 				{% endfor %}
 			</div>
 		</div>
