--- a/src/LarpManager/Views/public/groupeSecondaire/detail.twig
+++ b/src/LarpManager/Views/public/groupeSecondaire/detail.twig
@@ -96,50 +96,31 @@
 			<h5>Liste des membres</h5>
 		</div>
 		
-		<div class="list-group">
-		{% for membre in groupeSecondaire.membres %}
-			<div class="list-group-item">
-				<div class="list-group-item-heading">
-					<strong>{{ membre.personnage.publicName }}</strong>
-					&nbsp;
-					{% if membre.personnage.participeTo(participant.gn) %}
-						<span class="text-success">Inscrit à {{ participant.gn.label }}</span>
-					{% else %}
-						<span class="text-info">Personnage pas inscrit à {{ participant.gn.label }}</span>
-					{% endif %}
-					
-					<br />
-					{% if groupeSecondaire.responsable %}&nbsp;<a href="{{ path('message.new', {'to': membre.personnage.user.id }) }}"><i class="fa fa-pencil-square-o"></i>Envoyer un message</a>{% endif %}
-				</div>
-			</div>
-		{% endfor %}
-		</div>
-		
-		<div class="header">
-			<h5>Trombinoscope</h5>
-		</div>
-		
 		<div class="row">
 		{% for membre in groupeSecondaire.membres %}
-			{% if membre.personnage.participeTo(participant.gn) %}
-				<div class="col-xs-6 col-md-2">
-					{% if membre.personnage.trombineUrl %}
-						<img class="media-object" width="160" src="{{ path('personnage.trombine', {'personnage' : membre.personnage.id }) }}" />
+			<div class="col-md-2">
+				{% if membre.personnage.trombineUrl %}
+					<img class="media-object" width="160" src="{{ path('personnage.trombine', {'personnage' : membre.personnage.id }) }}" />
+				{% else %}
+					<img class="media-object" width="160" src="{{ app.request.basepath }}/img/no_trombine.png" />
+				{% endif %}
+				<div class="caption">
+					{{ membre.personnage.publicName }}<br />
+					{% if membre.personnage.participeTo(participant.gn) %}
+						<span class="text-success">Inscrit à {{ participant.gn.label }}</span><br />
 					{% else %}
-						<img class="media-object" width="160" src="{{ app.request.basepath }}/img/no_trombine.png" />
+						<span class="text-info">Personnage pas inscrit à {{ participant.gn.label }}</span><br />
 					{% endif %}
-					<div class="caption">
-						{{ membre.personnage.publicName }}
-						{% if groupeSecondaire.responsable == participant.personnage.publicName %}
-							{% if groupeSecondaire.secondaryGroupType.label == 'Religion' %}
-								{% for personnageReligion in membre.personnage.personnagesReligions %}
-									<li>{{ personnageReligion.religion.label }} - {{ personnageReligion.religionLevel.label }}</li>
-								{% endfor %}
-							{% endif %}
+					{% if groupeSecondaire.responsable == participant.personnage.publicName %}
+						{% if groupeSecondaire.secondaryGroupType.label == 'Religion' %}
+							{% for personnageReligion in membre.personnage.personnagesReligions %}
+								<li>{{ personnageReligion.religion.label }} - {{ personnageReligion.religionLevel.label }}</li>
+							{% endfor %}
 						{% endif %}
-					</div>
+						<a href="{{ path('message.new', {'to': membre.personnage.user.id }) }}"><i class="fa fa-pencil-square-o"></i>Envoyer un message</a><br />
+					{% endif %}
 				</div>
-			{% endif %}
+			</div>
 		{% endfor %}
 		</div>
 		
