--- a/src/LarpManager/Views/public/personnage/fragment/competence.twig
+++ b/src/LarpManager/Views/public/personnage/fragment/competence.twig
@@ -13,7 +13,7 @@
 			<p class="list-group-item-text">
 				{% if competence.documentUrl %}
 					<a class="btn btn-default btn-sm" href="{{ path('participant.competence.detail',{'participant': participant.id, 'competence' : competence.id}) }}">
-						<i class="fa fa-file"></i> Voir l'aide de jeu
+						<i class="fa fa-file"></i> Imprimer l'aide de jeu
 					</a>
 				{% endif %}
 			</p>							
