--- a/src/LarpManager/Views/public/personnage/fragment/connaissance.twig
+++ b/src/LarpManager/Views/public/personnage/fragment/connaissance.twig
@@ -13,7 +13,7 @@
 				<p class="list-group-item-text">
 					{% if connaissance.documentUrl %}
 						<a class="btn btn-default btn-sm" href="{{ path('participant.connaissance.detail',{'participant': participant.id, 'connaissance' : connaissance.id}) }}">
-							<i class="fa fa-file"></i> Voir l'aide de jeu
+							<i class="fa fa-file"></i> Imprimer l'aide de jeu
 						</a>
 					{% endif %}
 				</p>				
