--- a/src/LarpManager/Views/admin/groupeSecondaire/detail.twig
+++ b/src/LarpManager/Views/admin/groupeSecondaire/detail.twig
@@ -104,7 +104,7 @@
 	</div>
 	
 	<div class="panel panel-default">
-		<div class="panel-heading">Liste des membres ({{groupeSecondaire.membres|length}})</div>
+		<div class="panel-heading">Liste des membres ({{groupeSecondaire.getActifs(gn)|length}}/{{groupeSecondaire.membres|length}})</div>
 		
 		<div class="panel-body">					
 			<a href="{{ path('groupeSecondaire.admin.newMembre', {'groupeSecondaire': groupeSecondaire.id}) }}">Ajouter un membre</a>
@@ -123,12 +123,12 @@
 							{% if membre.secret %}
 								<p class="text-danger">A accès aux secrets du groupe</p>
 								<a href="{{ path('groupeSecondaire.admin.secret.off', {'groupe': groupeSecondaire.id , 'membre':membre.id}) }}">
-									Retirer l'accés aux secrets
+									Retirer l'accès aux secrets
 								</a>
 							{% else %}
 								<p>N'a pas accès aux secrets du groupe</p>
 								<a href="{{ path('groupeSecondaire.admin.secret.on', {'groupe': groupeSecondaire.id , 'membre':membre.id}) }}">
-									Donner accés aux secrets
+									Donner accès aux secrets
 								</a>
 							{% endif %}
 						</div>
