Fix Groupes Secondaires

--- a/src/LarpManager/Views/admin/groupeSecondaire/detail.twig
+++ b/src/LarpManager/Views/admin/groupeSecondaire/detail.twig
@@ -104,7 +104,7 @@
 	</div>
 	
 	<div class="panel panel-default">
-		<div class="panel-heading">Liste des membres ({{groupeSecondaire.getActifs(gn)|length}}/{{groupeSecondaire.membres|length}})</div>
+		<div class="panel-heading">Liste des membres ({{groupeSecondaire.getActifs(gn)}}/{{groupeSecondaire.membres|length}})</div>
 		
 		<div class="panel-body">					
 			<a href="{{ path('groupeSecondaire.admin.newMembre', {'groupeSecondaire': groupeSecondaire.id}) }}">Ajouter un membre</a>
