--- a/src/LarpManager/Views/personnage/sort.twig
+++ b/src/LarpManager/Views/personnage/sort.twig
@@ -28,7 +28,7 @@
 	
 	<div class="well well-sm">
 		<div class="header">
-			<h5>Coût de lancement des sort</h5>
+			<h5>Coût de lancement des sorts</h5>
 		</div>
 		<table class="table table-condensed table-bordered">
 			<thead>
@@ -58,7 +58,7 @@
 			</tbody>
 		</table>
 			
-		<p>Example : Un sort de niveau 2 coutera 3 Perles au mage connaissant le domaine de magie du sort, et 4 Perles au mage ne connaissant pas le domaine de magie.</p> 
+		<p>Exemple : Un sort de niveau 2 coutera 3 Perles au mage connaissant le domaine de magie du sort, et 4 Perles au mage ne connaissant pas le domaine de magie.</p> 
 	</div>
 
 	{% for sort in sorts %}
