--- a/src/LarpManager/Views/admin/personnage/enveloppe.twig
+++ b/src/LarpManager/Views/admin/personnage/enveloppe.twig
@@ -114,4 +114,11 @@
 	</ul>
 {% endif %}
 
+{% if personnage.isSensible %}
+	<strong>Personnage sensible</strong>
+	<ul>
+		<li>Brassard jaune avec un poing gravé</li>
+	</ul>
+{% endif %}
+
 {% endblock content %}
