--- a/src/LarpManager/Views/public/personnage/fragment/info.twig
+++ b/src/LarpManager/Views/public/personnage/fragment/info.twig
@@ -39,7 +39,7 @@
 				</a>
 				<div class="collapse" id="sensibility">
 					<div class="list-group">
-						<strong>Pas de violence excessive dans les gestes ou les mots, pas de drague, de propositions d'alcool, etc.)</strong>
+						<strong>Pas de violence excessive dans les gestes ou les mots, pas de drague, de propositions d'alcool, etc.</strong>
 					</div>
 				</div>				
 			</li>
