--- a/src/LarpManager/Views/admin/personnage/detail.twig
+++ b/src/LarpManager/Views/admin/personnage/detail.twig
@@ -70,7 +70,7 @@
 							</a>
 							<div class="collapse" id="sensibility">
 								<div class="list-group">
-									<strong>Pas de violence excessive dans les gestes ou les mots, pas de drague, de propositions d'alcool, etc.)</strong>
+									<strong>Pas de violence excessive dans les gestes ou les mots, pas de drague, de propositions d'alcool, etc.</strong>
 								</div>
 							</div>
 							</p>{% endif %}		  					
