Amélioration de l'experience utilisateur à la création d'un nouveau personnage

--- a/src/LarpManager/Views/admin/gn/participantswithoutperso.twig
+++ b/src/LarpManager/Views/admin/gn/participantswithoutperso.twig
@@ -47,8 +47,8 @@
 						{% endif %}
 					</td>
 					<td>
-						<a href="{{ path('participant.admin.personnage.new', {'participant' : participant.id}) }}">Créer un personnage</a>
 						<a href="{{ path('participant.admin.personnage.old', {'participant' : participant.id}) }}">Récupérer un ancien personnage</a>
+						<a href="{{ path('participant.admin.personnage.new', {'participant' : participant.id}) }}">Créer un nouveau personnage</a>
 					</td>
 				</tr>
 			{% endfor %}
